# ospool

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/ospool/: __init__.py
src/ospool/cli/: __init__.py  cli.py
src/ospool/utils/: config.py  query.py
