[metadata]
name = ospool
author = Brian Bockelman
author_email = bbbockelman@morgridge.org
description = Tools for querying the OSG Open Science Pool about available jobs
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bbockelm/ospool
project_urls =
    Bug Tracker = https://github.com/bbockelm/ospool/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    htcondor>=9.0
    click>=7.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ospool = ospool.cli:cli
